--- a/style/style.css
+++ b/style/style.css
@@ -50,10 +50,9 @@ height: 50px;}
 .form{
     padding: 10px;
     width:400px;
-    height:calc(100% + 30px);
+    height:100%;
     float:right;
     position:relative;
-    top:-15px;
     border-width:12px;
     border-color:rgba(120,120,120,0.5);
     border-style:solid;
@@ -95,6 +94,7 @@ height: 50px;}
     width: 344px;
     height:55px;
     border:1px solid #ccc;}
+
 
 .form .input-submit-container{text-align: center;}
 
